# Boids

./: .gitignore  CMakeLists.txt  README.md
abandon/: bird.txt  funcThread.txt  main.txt
include/: All.h  bird.h  camera.h  crossList.h  crossList.tpp  funcThread.h  info.h  key.h  mouse.h  render.h  shader.h  shape.h  timer.cpp  timer.h
shader/: boids.fs  boids.vs
src/: bird.cpp  crossList.cpp  funcThread.cpp  info.cpp  key.cpp  main.cpp  mouse.cpp  render.cpp  snake.py  test.py  timer.cpp
